--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,2 +1,9 @@
-<h1>Hello World!</h1>
-{{ content }}
+<div class="container">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+				<app-message [message]="message"
+										 (editClicked)="message.content = $event"
+										 *ngFor="let message of message"></app-message>
+		</div>
+	</div>
+</div>
