--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-10 col-md-offset-1">
-				<app-message [message]="message"
-										 (editClicked)="message.content = $event"
-										 *ngFor="let message of message"></app-message>
-		</div>
+		<app-message-input></app-message-input>
+	</div>
+	<hr>
+	<div class="row">
+		<app-message-list></app-message-list>
 	</div>
 </div>
