--- a/assets/app/messages/message.component.html
+++ b/assets/app/messages/message.component.html
@@ -1,5 +1,5 @@
-<input type="text" [(ngModel)]="message.content">
-<article class="panel panel-default" [ngStyle]="{backgroundColor: color}" (mouseenter)="color = 'green'">
+<!-- >input type="text" [(ngModel)]="message.content"> -->
+<article class="panel panel-default" [ngStyle]="{backgroundColor: color}" (mouseenter)="color = 'white'">
 	<div class="panel-body">
 		{{ message.content }}
 	</div>
