--- a/assets/app/messages/message-input.component.html
+++ b/assets/app/messages/message-input.component.html
@@ -1,7 +1,15 @@
 <div class="col-md-10 col-md-offset-1">
-	<div class="form-group">
-		<label for="content">Content</label>
-		<input type="text" id="content" class="form-control" #input>
-	</div>
-	<button class="btn btn-primary" type="submit" (click)="onSave(input.value)">Save</button>
+	<form (ngSubmit)="onSubmit(f)" #f="ngForm">
+		<div class="form-group">
+			<label for="content">Content</label>
+			<!-- form input type; note the required and ngModel tag -->
+			<input type="text"
+						id="content"
+						class="form-control"
+						ngModel
+						name="content"
+						required>
+		</div>
+		<button class="btn btn-primary" type="submit">Save</button>
+	</form>
 </div>
