--- a/assets/app/messages/message.component.html
+++ b/assets/app/messages/message.component.html
@@ -1,14 +1,15 @@
-<article class="panel panel-default">
-    <div class="panel-body">
-        {{ message.content }}
-    </div>
-    <footer class="panel-footer">
-        <div class="author">
-            {{ message.username }}
-        </div>
-        <div class="config" *ngIf="belongsToUser()">
-            <a (click)="onEdit()">Edit</a>
-            <a (click)="onDelete()">Delete</a>
-        </div>
-    </footer>
+<!-- >input type="text" [(ngModel)]="message.content"> -->
+<article class="panel panel-default" [ngStyle]="{backgroundColor: color}" (mouseenter)="color = 'white'">
+	<div class="panel-body">
+		{{ message.content }}
+	</div>
+	<footer class="panel-footer">
+		<div class="author">
+			{{ message.username }}
+		</div>
+		<div class="config">
+			<a href="#" (click)="onEdit()">Edit</a>
+			<a href="#" (click)="onDelete()">Delete</a>
+		</div>
+	</footer>
 </article>
