--- a/assets/app/messages/message.component.html
+++ b/assets/app/messages/message.component.html
@@ -7,7 +7,7 @@
 		<div class="author">
 			{{ message.username }}
 		</div>
-		<div class="config">
+		<div class="config" *ngIf="belongsToUser()">
 			<a href="#" (click)="onEdit()">Edit</a>
 			<a href="#" (click)="onDelete()">Delete</a>
 		</div>
